added function rainy_season() based on Fortran program by Gerstengarbe et al. to estimate start and end dates of the yearly rainy season from a precipitation time series

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,7 @@ export(calc_subbas)
 export(lump_grass_post)
 export(lump_grass_prep)
 export(prof_class)
+export(rainy_season)
 export(reservoir_outlet)
 export(wasa_reservoir_par)
+useDynLib(LUMP)
