--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,11 @@ Description: The package provides functions for a semi-automated approach of
     connected to and uses functionalities of GRASS GIS.
 Depends:
     spgrass6,
-    doMC,
     raster,
     cluster,
     maptools,
-    xts
+    xts,
+    foreach
+Suggests:
+    doMC
 License: GPL-3
