--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: LUMP
 Type: Package
-Title: Landscape Unit Mapping Program, branch: fc
-Version: 0.12.1
-Date: 2015-03-23
+Title: Landscape Unit Mapping Program
+Version: 0.12.2
+Date: 2015-04-02
 Author: Tobias Pilz <tpilz@uni-potsdam.de>
 Maintainer: Tobias Pilz <tpilz@uni-potsdam.de>
 Description: The package provides functions for a semi-automated approach of
