db_fill: new function to fill database with values based on external data files created manually and/or using LUMP functions
db_create: new name of the function to create parameter database and some further minor changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,12 @@
 export(area2catena)
 export(calc_seasonality)
 export(calc_subbas)
-export(create_db)
 export(lump_grass_post)
 export(lump_grass_prep)
 export(prof_class)
 export(rainy_season)
 export(reservoir_outlet)
 export(wasa_reservoir_par)
+export(db_create)
+export(db_fill)
 #useDynLib(LUMP) #temporary fix to allow installation under Windows
