Function db_check() + minor changes
Function for post-processing and checking of parameter database. Not all planned checks have yet been included.

Some minor changes in other functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ export(wasa_reservoir_par)
 export(db_create)
 export(db_fill)
 export(db_update)
+export(db_check)
 #useDynLib(LUMP) #temporary fix to allow installation under Windows
