--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,5 @@ export(db_create)
 export(db_fill)
 export(db_update)
 export(db_check)
+export(db_wasa_input)
 #useDynLib(LUMP) #temporary fix to allow installation under Windows
