--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: LUMP
 Type: Package
 Title: Landscape Unit Mapping Program
-Version: 0.12.9
-Date: 2015-06-24
-Author: Tobias Pilz <tpilz@uni-potsdam.de>
-Maintainer: Tobias Pilz <tpilz@uni-potsdam.de>
+Version: 0.13.0
+Date: 2015-07-16
+Authors@R: c(person("Tobias", "Pilz", email="tpilz@uni-potsdam.de", 
+																		role=c("aut", "cre", "cph")),
+							person("Till", "Francke", email="francke@uni-potsdam.de",
+																		role=c("aut", "cph")))
 Description: The package provides functions for a semi-automated approach of
     the delineation and description of landscape units and partition into
     terrain components. It can be used for the pre-processing of
@@ -16,9 +18,12 @@ Depends:
     cluster,
     maptools,
     xts,
-    foreach
+    foreach,
+    RODBC
 Suggests:
     doMC,
-    doParallel,
-    RODBC
+    doParallel
 License: GPL-3
+URL: https://github.com/tpilz/LUMP
+BugReports: https://github.com/tpilz/LUMP/issues
+NeedsCompilation: yes
