New function reservoir_lumped()
Function generates the WASA parameter files lake.dat and lake_number.dat (mandatory for treatment of lumped reservoirs, i.e. running WASA with option 'doacudes') from a pre-processed reservoir vector and a subbasin raster file stored in a GRASS location.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(lump_grass_prep)
 export(prof_class)
 export(rainy_season)
 export(reservoir_outlet)
+export(reservoir_lumped)
 export(wasa_reservoir_par)
 export(db_create)
 export(db_fill)
