--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(prof_class)
 export(rainy_season)
 export(reservoir_outlet)
 export(reservoir_lumped)
-export(wasa_reservoir_par)
+export(reservoir_strategic)
 export(db_create)
 export(db_fill)
 export(db_update)
