ENH: Packages rgdal and rgeos have to be installed
To run all functions without problems rgdal and rgeos have to be installed.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,9 @@ Depends:
     maptools,
     xts,
     foreach,
-    RODBC
+    RODBC,
+    rgdal,
+    rgeos
 Suggests:
     doMC,
     doParallel
