--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: LUMP
+Package: lumpR
 Type: Package
-Title: Landscape Unit Mapping Program
-Version: 1.4.14
-Date: 2016-12-09
+Title: Landscape Unit Mapping Program for R
+Version: 2.0.0
+Date: 2017-01-10
 Authors@R: c(person("Tobias", "Pilz", email="tpilz@uni-potsdam.de", 
 																		role=c("aut", "cre", "cph")),
 							person("Till", "Francke", email="francke@uni-potsdam.de",
