--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Description: The package provides functions for a semi-automated approach of
     Additional pre-processing tools beyond the scope of the original LUMP are
     included.
 Depends:
-    spgrass6,
+    rgrass7,
     raster,
     cluster,
     maptools,
