--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: lumpR
 Type: Package
 Title: Landscape Unit Mapping Program for R
 Version: 2.4.13
-Date: 2018-07-13
+Date: 2018-08-27
 Authors@R: c(person("Tobias", "Pilz", email="tpilz@uni-potsdam.de", 
 																		role=c("aut", "cre", "cph")),
 							person("Till", "Francke", email="francke@uni-potsdam.de",
@@ -31,4 +31,5 @@ License: GPL-3
 URL: https://github.com/tpilz/lumpR
 BugReports: https://github.com/tpilz/lumpR/issues
 NeedsCompilation: yes
-RoxygenNote: 6.0.1
+Encoding: UTF-8
+RoxygenNote: 6.1.0
