FIX: db_compute_musleK was not declared as public function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(db_create)
 export(db_fill)
 export(db_update)
 export(db_check)
+export(db_compute_musleK)
 export(db_wasa_input)
 export(db_extract_subcatch)
 export(disc_wrapper)
