--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lumpR
 Type: Package
 Title: Landscape Unit Mapping Program for R
-Version: 3.0.50
+Version: 3.1.0
 Date: 2020-06-23
 Authors@R: c(person("Tobias", "Pilz", email="tpilz@uni-potsdam.de", 
 																		role=c("aut", "cre", "cph")),
@@ -15,7 +15,6 @@ Description: The package provides functions for a semi-automated approach of
     Additional pre-processing tools beyond the scope of the original LUMP are
     included.
 Depends:
-    rgrass7,
     raster,
     cluster,
     maptools,
@@ -23,8 +22,10 @@ Depends:
     foreach,
     RODBC,
     rgdal,
-    rgeos
+    rgeos,
+    terra
 Suggests:
+    rgrass,
     doMC,
     doParallel
 License: GPL-3
@@ -32,4 +33,4 @@ URL: https://github.com/tpilz/lumpR
 BugReports: https://github.com/tpilz/lumpR/issues
 NeedsCompilation: yes
 Encoding: UTF-8
-RoxygenNote: 7.1.0
+RoxygenNote: 7.2.3
