--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: lumpR
 Type: Package
 Title: Landscape Unit Mapping Program for R
-Version: 3.1.12
-Date: 2024-01-15
+Version: 3.1.13
+Date: 2024-01-2
 Authors@R: c(person("Tobias", "Pilz", email="tpilz@uni-potsdam.de", 
 																		role=c("aut", "cre", "cph")),
 							person("Till", "Francke", email="francke@uni-potsdam.de",
@@ -26,7 +26,7 @@ Depends:
     terra,
     sf
 Suggests:
-    rgrass,
+    rgrass (>= 0.4-1),
     doMC,
     doParallel
 License: GPL-3
