--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: lumpR
 Type: Package
 Title: Landscape Unit Mapping Program for R
-Version: 3.1.25
-Date: 2025-01-28
-Authors@R: c(person("Tobias", "Pilz", email="tpilz@uni-potsdam.de", 
+Version: 3.2
+Date: 2025-12-12
+Authors@R: c(person("Tobias", "Pilz", 
 																		role=c("aut", "cre", "cph")),
 							person("Till", "Francke", email="francke@uni-potsdam.de",
 																		role=c("aut", "cph")))
@@ -21,9 +21,9 @@ Depends:
     foreach,
     RODBC,
     terra,
+    rgrass (>= 0.4-1),
     sf
 Suggests:
-    rgrass (>= 0.4-1),
     doMC,
     doParallel
 License: GPL-3
