--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Landscape Unit Mapping Program for R
 Version: 3.2
 Date: 2025-12-12
-Authors@R: c(person("Tobias", "Pilz", 
+Authors@R: c(person("Tobias", "Pilz", email="tpilz@uni-potsdam.de",
 																		role=c("aut", "cre", "cph")),
 							person("Till", "Francke", email="francke@uni-potsdam.de",
 																		role=c("aut", "cph")))
