ENH: Added "followed by" information to man-files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(db_wasa_input)
 export(disc_wrapper)
 export(lump_grass_post)
 export(lump_grass_prep)
+export(modify_eha_head_files)
 export(prepare_snow_input)
 export(prof_class)
 export(rainy_season)
